--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 .Python
 build/
 dataset/
+/test
 model/
 develop-eggs/
 dist/
@@ -22,7 +23,6 @@ parts/
 sdist/
 var/
 wheels/
-test/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
@@ -131,3 +131,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 /model/
+/test/
